明天开工，要认真了

--- a/SyncArea/SyncArea/Components/Pages/AccessDenied.razor
+++ b/SyncArea/SyncArea/Components/Pages/AccessDenied.razor
@@ -1,6 +1,6 @@
 ﻿@page "/AccessDenied"
-
-<h4>暂无权访问此页面!</h4>
+<h3 style="text-align:center">暂无权访问此页面!</h3>
+<MudLink Href="/">回到主页</MudLink>
 @code {
 
 }
