--- a/SyncArea/SyncArea/Components/Pages/Admin/SharePage.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/SharePage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/sharePage"
 @using Microsoft.AspNetCore.Authorization
+@using SyncArea.Components.Pages.Admin.Dialog
 @using SyncArea.Misc
 @using SyncArea.Services
 @attribute [Authorize(Roles = "Admin")]
