--- a/SyncArea/SyncArea/Components/Pages/Admin/ShareView.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/ShareView.razor
@@ -1,4 +1,5 @@
 ﻿@page "/share"
+@using SyncArea.Components.Pages.Workspace
 @using SyncArea.Services
 @inject ShareService ShareService
 @inject WorkItemService WorkItemService
