--- a/SyncArea/SyncArea/Components/Pages/Admin/Dialog/EditUserDialog.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/Dialog/EditUserDialog.razor
@@ -20,7 +20,7 @@
         </EditForm>
     </MudCardContent>
     <MudCardActions>
-        <MudButton Variant="Variant.Outlined" OnClick="Cancel">取消</MudButton>
+        <MudButton Class="ml-auto" Variant="Variant.Outlined" OnClick="Cancel">取消</MudButton>
         <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Color="Color.Primary" OnClick="HandleUpdateUser">保存</MudButton>
     </MudCardActions>
 </MudCard>
