--- a/SyncArea/SyncArea/Components/_Imports.razor
+++ b/SyncArea/SyncArea/Components/_Imports.razor
@@ -15,3 +15,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authorization
 @using MudX
+
+@using SyncArea.Misc
+@using SyncArea.Components.ToolComponent
+@using SyncArea.Pages.Account
