完成了文件目录的修改 密码重置和修改的bug

--- a/SyncArea/SyncArea/Components/Pages/SharePage/ShareView.razor
+++ b/SyncArea/SyncArea/Components/Pages/SharePage/ShareView.razor
@@ -1,6 +1,7 @@
 ﻿@page "/share"
 @using SyncArea.Components.Pages.Workspace
 @using SyncArea.Services
+@using static SyncArea.Services.WorkItemService
 @inject ShareService ShareService
 @inject WorkItemService WorkItemService
 @inject NavigationManager Navigation
