--- a/SyncArea/SyncArea/Components/Pages/Workspace/DisplayWorkItem.razor
+++ b/SyncArea/SyncArea/Components/Pages/Workspace/DisplayWorkItem.razor
@@ -2,6 +2,7 @@
 @using MudBlazor
 @using SyncArea.Components.Pages.Admin
 @using SyncArea.Services
+@using static SyncArea.Services.WorkItemService
 @inject IDialogService DialogService
 @inject IJSRuntime JSRuntime
     <div id="container"  style="max-height:80vh;overflow:scroll">
