--- a/SyncArea/SyncArea/Components/App.razor
+++ b/SyncArea/SyncArea/Components/App.razor
@@ -21,6 +21,7 @@
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
     <script src="lazyload.js"></script>
     <script src="photoService.js"></script>
+    <script src="downloadService.js"></script>
 </body>
 
 </html>
