--- a/SyncArea/SyncArea/Components/Layout/MainLayout.razor
+++ b/SyncArea/SyncArea/Components/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
         {
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         }
-        <MudNavMenu  Href="/" Class="ml-3"><MudText Typo="Typo.h5">SyncArea</MudText> </MudNavMenu>
+        <MudNavMenu Href="/" Class="ml-3"><MudText Typo="Typo.h6">QFMS文件共享管理系统</MudText> </MudNavMenu>
         <MudSpacer />
 
         <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle" />
