--- a/SyncArea/SyncArea/Components/Pages/Workspace/CreateWorkItemDialog.razor
+++ b/SyncArea/SyncArea/Components/Pages/Workspace/CreateWorkItemDialog.razor
@@ -32,11 +32,11 @@
     <DialogActions>
         <MudButton Variant="Variant.Outlined" OnClick="Cancel">取消</MudButton>
         <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Color="Color.Primary" OnClick="HandleCreateWorkItem">创建</MudButton>
-        <MudOverlay Visible=isSending Absolute DarkBackground>
+        <MudOverlay Visible=isSending Absolute DarkBackground>a                                                                                                                         
             <MudProgressCircular Color="Color.Secondary" Indeterminate="true" />
         </MudOverlay>
     </DialogActions>
-</MudDialog>
+</MudDialog><a href="#"></a>                                                                                                                                                                                                        aqu
 
 <style>
     .gallery-card {
